--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,8 +2,17 @@
   height: 100vh;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-direction: column;
   background: #fafafa;
+  padding: 0 5rem;
+  div{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
