--- a/src/app/components/svg-canvas/svg-canvas.component.scss
+++ b/src/app/components/svg-canvas/svg-canvas.component.scss
@@ -1,13 +1,25 @@
-:host{
+:host {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   width: 100%;
-  height: 75%;
-  svg{
-    width: 90%;
+  height: 100%;
+  position: relative;
+
+  svg {
+    width: 100%;
     height: 100%;
-    box-shadow:0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
+    box-shadow: 0 2px 1px -1px rgba(0, 0, 0, .2), 0 1px 1px 0 rgba(0, 0, 0, .14), 0 1px 3px 0 rgba(0, 0, 0, .12);
     background: white;
+    border-radius: 4px;
+  }
+
+  ::ng-deep {
+    button {
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
   }
 }
