--- a/src/app/components/logger/logger.component.html
+++ b/src/app/components/logger/logger.component.html
@@ -1,6 +1,6 @@
 <div class="content">
 logger:
-<ul *ngFor="let command of message" class="message-list">
-  <li class="message">{{command}}</li>
+<ul class="message-list">
+  <li *ngFor="let command of message" class="message">{{command}}</li>
 </ul>
 </div>
