refactor minor flaws, rename figure to shapes

--- a/src/app/components/shape-input/shape-input.component.html
+++ b/src/app/components/shape-input/shape-input.component.html
@@ -11,7 +11,7 @@
     <button
       matSuffix
       mat-icon-button
-      aria-label="Draw figure"
+      aria-label="Draw shape"
       type="submit"
       [disabled]="!form.valid"
     >      <mat-icon>edit</mat-icon>
