--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-figure-input (figureEnter)="setFigures($event)"></app-figure-input>
+<app-shape-input (figureEnter)="setFigures($event)"></app-shape-input>
 <div>
-  <app-svg-canvas [figures]="figures"></app-svg-canvas>
+  <app-svg-canvas [shapes]="shapes"></app-svg-canvas>
   <app-logger></app-logger>
 </div>
